set up for portfolio from my start template

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>TailwindCSS Static Site Template</title>
+    <title>Jake Harvanchik</title>
     <link rel="stylesheet" href="./assets/styles/styles.css" />
+    <!-- Scripts -->
+    <script
+      defer
+      src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   </head>
 
   <body>
-    <section class="flex h-screen w-full items-center justify-center">
+    <section class="flex items-center justify-center w-full h-screen">
       <h1 class="text-5xl">Hello World</h1>
     </section>
   </body>
