finished resume rough draft

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Jake Harvanchik</title>
-    <link rel="stylesheet" href="./assets/styles/styles.css" />
+    <link rel="stylesheet" href="/assets/styles/styles.css" />
     <!-- Scripts -->
     <script
       defer
