--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Jake Harvanchik</title>
+    <title>Jake Harvanchik | Resume</title>
     <link rel="stylesheet" href="/assets/styles/styles.css" />
     <!-- Scripts -->
     <script src="https://kit.fontawesome.com/4f831b6978.js" crossorigin="anonymous"></script>
@@ -17,7 +17,9 @@
       <!-- START: Header -->
       <section id="header" class="flex flex-col text-center">
         <h1 class="text-xl font-bold">Jake Harvanchik</h1>
-        <a href="https://goo.gl/maps/mQ9rL8scAhPr5SRJ6" target="_blank">Stevenson Ranch, California 91381</a>
+        <a href="https://goo.gl/maps/mQ9rL8scAhPr5SRJ6" target="_blank" class="mx-auto"
+          >Stevenson Ranch, California 91381</a
+        >
         <p class="mx-auto flex flex-row gap-x-2">
           <!-- START: Cell Number -->
           <a href="tel:+16618033757" class="flex flex-row gap-x-1">
