added online portfolio link to header

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Jake Harvanchik | Resume</title>
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <!-- Scripts -->
+    <!-- START: Scripts -->
     <script src="https://kit.fontawesome.com/4f831b6978.js" crossorigin="anonymous"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <!-- END: Scripts -->
   </head>
 
   <body
-    class="mx-auto h-full max-w-[700px] pt-10 pb-80 font-serif text-sm selection:bg-cyan-500/75 selection:text-white print:pb-0 print:pt-0 print:text-xs">
+    class="mx-auto h-full max-w-[750px] pt-10 pb-80 font-serif text-sm selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs">
     <!-- START: Page -->
     <div class="flex flex-col gap-y-2">
       <!-- START: Header -->
@@ -20,7 +21,7 @@
         <a href="https://goo.gl/maps/mQ9rL8scAhPr5SRJ6" target="_blank" class="mx-auto"
           >Stevenson Ranch, California 91381</a
         >
-        <p class="mx-auto flex flex-row gap-x-2">
+        <p class="mx-auto flex flex-row gap-x-1">
           <!-- START: Cell Number -->
           <a href="tel:+16618033757" class="flex flex-row gap-x-1">
             <i class="fa-solid fa-phone my-auto"></i>
@@ -34,6 +35,13 @@
             <span class="my-auto">resume@harvanchik.me</span>
           </a>
           <!-- END: Email Address -->
+          <span>|</span>
+          <!-- START: Online Portfolio -->
+          <a href="https://jake.harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
+            <i class="fa-solid fa-laptop-code my-auto"></i>
+            <span class="my-auto">jake.harvanchik.me</span>
+          </a>
+          <!-- END: Online Portfolio -->
           <span>|</span>
           <!-- START: Linked In -->
           <a href="https://www.linkedin.com/in/harvanchik" target="_blank" class="flex flex-row gap-x-1">
