--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body
-    class="mx-auto h-full max-w-[750px] pt-10 pb-80 font-serif text-sm selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs">
+    class="layout mx-auto h-full max-w-[750px] pt-10 pb-80 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs xs:text-sm">
     <!-- START: Page -->
     <div class="flex flex-col gap-y-2">
       <!-- START: Header -->
@@ -21,35 +21,35 @@
         <a href="https://goo.gl/maps/mQ9rL8scAhPr5SRJ6" target="_blank" class="mx-auto"
           >Stevenson Ranch, California 91381</a
         >
-        <p class="mx-auto flex flex-row gap-x-1">
+        <p class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 md:max-w-none">
           <!-- START: Cell Number -->
           <a href="tel:+16618033757" class="flex flex-row gap-x-1">
             <i class="fa-solid fa-phone my-auto"></i>
             <span class="my-auto">(661) 803-3757</span>
           </a>
           <!-- END: Cell Number -->
-          <span>|</span>
+          <span class="hidden md:inline">|</span>
           <!-- START: Email Address -->
           <a href="mailto:resume@harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
             <i class="fa-solid fa-envelope my-auto"></i>
             <span class="my-auto">resume@harvanchik.me</span>
           </a>
           <!-- END: Email Address -->
-          <span>|</span>
+          <span class="hidden md:inline">|</span>
           <!-- START: Online Portfolio -->
           <a href="https://jake.harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
             <i class="fa-solid fa-laptop-code my-auto"></i>
             <span class="my-auto">jake.harvanchik.me</span>
           </a>
           <!-- END: Online Portfolio -->
-          <span>|</span>
+          <span class="hidden md:inline">|</span>
           <!-- START: Linked In -->
           <a href="https://www.linkedin.com/in/harvanchik" target="_blank" class="flex flex-row gap-x-1">
             <i class="fa-brands fa-linkedin-in my-auto"></i>
             <span class="my-auto">harvanchik</span>
           </a>
           <!-- END: Linked In -->
-          <span>|</span>
+          <span class="hidden md:inline">|</span>
           <!-- START: GitHub -->
           <a href="https://github.com/harvanchik" target="_blank" class="flex flex-row gap-x-1">
             <i class="fa-brands fa-github my-auto"></i>
@@ -71,8 +71,9 @@
                 California State University, Fullerton
               </a>
             </div>
-            <div class="flex flex-col text-right">
-              <p>Expected May 2023</p>
+            <div class="flex min-w-max flex-col text-right">
+              <p class="hidden xs:inline">Expected May 2023</p>
+              <p class="xs:hidden">Exp. May '23</p>
               <p>Fullerton, CA</p>
             </div>
           </div>
@@ -86,22 +87,23 @@
           Related Courses
         </h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="ml-4 list-disc columns-2">
-            <li>
+          <ul class="ml-4 w-full list-disc columns-2 gap-x-28">
+            <li class="min-w-max">
               Object Oriented Programming |
               <span class="italic">Java</span>
             </li>
-            <li>
+            <li class="min-w-max">
               Data Structures |
               <span class="italic">C++</span>
             </li>
-            <li>
+            <li class="min-w-max">
               Video Game Design |
               <span class="italic">Unity/C#</span>
             </li>
-            <li>Calculus I, II, III</li>
-            <li>Statistics</li>
-            <li>Visual Basic for Applications</li>
+            <li class="min-w-max">Calculus I, II, III</li>
+            <li class="min-w-max">Statistics</li>
+            <li class="hidden min-w-max xs:list-item">Visual Basic for Applications</li>
+            <li class="min-w-max xs:hidden">Visual Basic for Apps.</li>
           </ul>
         </div>
       </section>
@@ -163,8 +165,9 @@
                 <p class="font-bold">Junior Software Developer</p>
                 <a href="https://didintegration.com" target="_blank" class="italic">DiD Integration, Inc.</a>
               </div>
-              <div class="flex flex-col text-right">
-                <p>July 2020 - November 2021</p>
+              <div class="font-xs sm:font-sm flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">July 2020 - November 2021</p>
+                <p class="xs:hidden">July '20 - Nov. '21</p>
                 <p>Valencia, CA</p>
               </div>
             </div>
@@ -187,13 +190,14 @@
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
-                <p class="font-bold">Residential Advisor</p>
+                <p class="font-bold">Residential Advisor (RA)</p>
                 <a href="https://reslife.okstate.edu" target="_blank" class="italic">
                   Housing and Residential Life
                 </a>
               </div>
-              <div class="flex flex-col text-right">
-                <p>August 2019 - March 2020</p>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August 2019 - March 2020</p>
+                <p class="xs:hidden">Aug. '19 - March '20</p>
                 <p>Stillwater, OK</p>
               </div>
             </div>
@@ -215,8 +219,9 @@
                   Department of Wellness
                 </a>
               </div>
-              <div class="flex flex-col text-right">
-                <p>August 2018 - March 2020</p>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August 2018 - March 2020</p>
+                <p class="xs:hidden">Aug. '18 - March '20</p>
                 <p>Stillwater, OK</p>
               </div>
             </div>
@@ -249,8 +254,9 @@
                   Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, Github Pages
                 </p>
               </div>
-              <div class="flex flex-col text-right">
-                <p>Since December 2014</p>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">Since December 2014</p>
+                <p class="xs:hidden">Since Dec. '14</p>
               </div>
             </div>
             <ul class="ml-4 list-disc">
@@ -292,8 +298,9 @@
                   <a href="https://github.com/tiberiuzuld/angular-gridster2" target="_blank">Gridster API</a>
                 </p>
               </div>
-              <div class="flex flex-col text-right">
-                <p>August - November 2021</p>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August - November 2021</p>
+                <p class="xs:hidden">Aug. - Nov. '21</p>
               </div>
             </div>
             <ul class="ml-4 list-disc">
