--- a/resume/index.html
+++ b/resume/index.html
@@ -87,9 +87,10 @@
           Related Courses
         </h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="ml-4 w-full list-disc columns-2 gap-x-28">
+          <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
             <li class="min-w-max">
-              Object Oriented Programming |
+              <span class="hidden min-w-max xs:inline">Object-Oriented Programming |</span>
+              <span class="xs:hidden">Object Oriented Program. |</span>
               <span class="italic">Java</span>
             </li>
             <li class="min-w-max">
