started index page

--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body
-    class="layout mx-auto h-full max-w-[750px] pt-10 pb-80 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs xs:text-sm">
+    class="layout relative mx-auto h-full max-w-[750px] pt-10 pb-80 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs xs:text-sm">
     <!-- START: Page -->
     <div class="flex flex-col gap-y-2">
       <!-- START: Header -->
@@ -89,17 +89,17 @@
         <div class="flex flex-col gap-y-1.5">
           <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
             <li class="min-w-max">
-              <span class="hidden min-w-max xs:inline">Object-Oriented Programming |</span>
-              <span class="xs:hidden">Object Oriented Program. |</span>
-              <span class="italic">Java</span>
+              <span class="hidden min-w-max xs:inline">Object-Oriented Programming</span>
+              <span class="xs:hidden">Object Oriented Program.</span>
+              <span class="italic"> | Java</span>
             </li>
             <li class="min-w-max">
-              Data Structures |
-              <span class="italic">C++</span>
+              <span>Data Structures</span>
+              <span class="italic"> | C++</span>
             </li>
             <li class="min-w-max">
-              Video Game Design |
-              <span class="italic">Unity/C#</span>
+              <span>Video Game Design</span>
+              <span class="italic"> | Unity/C#</span>
             </li>
             <li class="min-w-max">Calculus I, II, III</li>
             <li class="min-w-max">Statistics</li>
@@ -319,5 +319,6 @@
       <!-- END: Projects -->
     </div>
     <!-- END: Page -->
+    <span class="absolute bottom-0 left-0 right-0 mx-auto w-max">Created with HTML and CSS</span>
   </body>
 </html>
