--- a/resume/index.html
+++ b/resume/index.html
@@ -10,48 +10,49 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <!-- END: Scripts -->
   </head>
-
+  <!-- TODO: fix text not being smaller in print version -->
   <body
-    class="layout relative mx-auto h-full max-w-[750px] pt-10 pb-80 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs xs:text-sm">
+    class="layout relative mx-auto h-full max-w-[750px] pt-10 pb-80 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-[10px] print:leading-3 xs:text-sm">
     <!-- START: Page -->
-    <div class="flex flex-col gap-y-2">
+    <div class="gap-y-2 flex flex-col">
       <!-- START: Header -->
       <section id="header" class="flex flex-col text-center">
-        <h1 class="text-xl font-bold">Jake Harvanchik</h1>
+        <h1 class="print:text-base text-xl font-bold">Jake Harvanchik</h1>
         <a href="https://goo.gl/maps/mQ9rL8scAhPr5SRJ6" target="_blank" class="mx-auto"
           >Stevenson Ranch, California 91381</a
         >
-        <p class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 md:max-w-none">
+        <p
+          class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 print:max-w-none print:text-[10px] md:max-w-none">
           <!-- START: Cell Number -->
-          <a href="tel:+16618033757" class="flex flex-row gap-x-1">
+          <a href="tel:+16618033757" class="gap-x-1 flex flex-row">
             <i class="fa-solid fa-phone my-auto"></i>
             <span class="my-auto">(661) 803-3757</span>
           </a>
           <!-- END: Cell Number -->
-          <span class="hidden md:inline">|</span>
+          <span class="print:inline md:inline hidden">|</span>
           <!-- START: Email Address -->
-          <a href="mailto:resume@harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
+          <a href="mailto:resume@harvanchik.me" target="_blank" class="gap-x-1 flex flex-row">
             <i class="fa-solid fa-envelope my-auto"></i>
             <span class="my-auto">resume@harvanchik.me</span>
           </a>
           <!-- END: Email Address -->
-          <span class="hidden md:inline">|</span>
+          <span class="print:inline md:inline hidden">|</span>
           <!-- START: Online Portfolio -->
-          <a href="https://jake.harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
+          <a href="https://jake.harvanchik.me" target="_blank" class="gap-x-1 flex flex-row">
             <i class="fa-solid fa-laptop-code my-auto"></i>
             <span class="my-auto">jake.harvanchik.me</span>
           </a>
           <!-- END: Online Portfolio -->
-          <span class="hidden md:inline">|</span>
+          <span class="print:inline md:inline hidden">|</span>
           <!-- START: Linked In -->
-          <a href="https://www.linkedin.com/in/harvanchik" target="_blank" class="flex flex-row gap-x-1">
+          <a href="https://www.linkedin.com/in/harvanchik" target="_blank" class="gap-x-1 flex flex-row">
             <i class="fa-brands fa-linkedin-in my-auto"></i>
             <span class="my-auto">harvanchik</span>
           </a>
           <!-- END: Linked In -->
-          <span class="hidden md:inline">|</span>
+          <span class="print:inline md:inline hidden">|</span>
           <!-- START: GitHub -->
-          <a href="https://github.com/harvanchik" target="_blank" class="flex flex-row gap-x-1">
+          <a href="https://github.com/harvanchik" target="_blank" class="gap-x-1 flex flex-row">
             <i class="fa-brands fa-github my-auto"></i>
             <span class="my-auto">harvanchik</span>
           </a>
@@ -62,7 +63,7 @@
 
       <!-- START: Education -->
       <section id="education">
-        <h2 class="mb-1.5 w-full border-b border-black font-bold uppercase tracking-wider">Education</h2>
+        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Education</h2>
         <div class="flex flex-col gap-y-1.5">
           <div class="flex flex-row justify-between">
             <div class="flex flex-col">
@@ -71,8 +72,8 @@
                 California State University, Fullerton
               </a>
             </div>
-            <div class="flex min-w-max flex-col text-right">
-              <p class="hidden xs:inline">Expected May 2023</p>
+            <div class="min-w-max flex flex-col text-right">
+              <p class="xs:inline hidden">Expected May 2023</p>
               <p class="xs:hidden">Exp. May '23</p>
               <p>Fullerton, CA</p>
             </div>
@@ -83,13 +84,13 @@
 
       <!-- START: Related Courses -->
       <section id="related-courses">
-        <h2 class="mb-1.5 w-full border-b border-black font-bold uppercase tracking-wider">
+        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">
           Related Courses
         </h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
+          <ul class="columns-2 gap-x-20 w-full ml-4 list-disc">
             <li class="min-w-max">
-              <span class="hidden min-w-max xs:inline">Object-Oriented Programming</span>
+              <span class="min-w-max xs:inline hidden">Object-Oriented Programming</span>
               <span class="xs:hidden">Object Oriented Program.</span>
               <span class="italic"> | Java</span>
             </li>
@@ -103,7 +104,7 @@
             </li>
             <li class="min-w-max">Calculus I, II, III</li>
             <li class="min-w-max">Statistics</li>
-            <li class="hidden min-w-max xs:list-item">Visual Basic for Applications</li>
+            <li class="min-w-max xs:list-item hidden">Visual Basic for Applications</li>
             <li class="min-w-max xs:hidden">Visual Basic for Apps.</li>
           </ul>
         </div>
@@ -112,7 +113,7 @@
 
       <!-- START: Technical Skills -->
       <section id="technical-skills">
-        <h2 class="mb-1.5 w-full border-b border-black font-bold uppercase tracking-wider">
+        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">
           Technical Skills
         </h2>
         <div class="flex flex-col gap-y-1.5">
@@ -157,17 +158,17 @@
 
       <!-- START: Work Experience -->
       <section id="work-experience">
-        <h2 class="mb-1.5 w-full border-b border-black font-bold uppercase">Work Experience</h2>
+        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase">Work Experience</h2>
         <div class="flex flex-col gap-y-1.5">
           <!-- START: DiD Integration -->
-          <div class="flex flex-col gap-y-1">
+          <div class="gap-y-1 flex flex-col">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Junior Software Developer</p>
                 <a href="https://didintegration.com" target="_blank" class="italic">DiD Integration, Inc.</a>
               </div>
-              <div class="font-xs sm:font-sm flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">July 2020 - November 2021</p>
+              <div class="font-xs sm:font-sm min-w-max flex flex-col text-right">
+                <p class="xs:inline hidden">July 2020 - November 2021</p>
                 <p class="xs:hidden">July '20 - Nov. '21</p>
                 <p>Valencia, CA</p>
               </div>
@@ -175,7 +176,7 @@
             <ul class="ml-4 list-disc">
               <li>
                 Redesigned the
-                <a href="https://agknowledge.com" target="_blank" class="underline print:no-underline">
+                <a href="https://agknowledge.com" target="_blank" class="print:no-underline underline">
                   company website
                 </a>
                 from scratch using
@@ -188,7 +189,7 @@
           </div>
           <!-- END: DiD Integration -->
           <!-- START: Residential Advisor -->
-          <div class="flex flex-col gap-y-1">
+          <div class="gap-y-1 flex flex-col">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Residential Advisor (RA)</p>
@@ -196,8 +197,8 @@
                   Housing and Residential Life
                 </a>
               </div>
-              <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">August 2019 - March 2020</p>
+              <div class="min-w-max flex flex-col text-right">
+                <p class="xs:inline hidden">August 2019 - March 2020</p>
                 <p class="xs:hidden">Aug. '19 - March '20</p>
                 <p>Stillwater, OK</p>
               </div>
@@ -212,7 +213,7 @@
           </div>
           <!-- END: Residential Advisor -->
           <!-- START: Intramural Sports Supervisor -->
-          <div class="flex flex-col gap-y-1">
+          <div class="gap-y-1 flex flex-col">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Intramural Sports Supervisor</p>
@@ -220,8 +221,8 @@
                   Department of Wellness
                 </a>
               </div>
-              <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">August 2018 - March 2020</p>
+              <div class="min-w-max flex flex-col text-right">
+                <p class="xs:inline hidden">August 2018 - March 2020</p>
                 <p class="xs:hidden">Aug. '18 - March '20</p>
                 <p>Stillwater, OK</p>
               </div>
@@ -233,7 +234,7 @@
               <li>Filed reports of player or team misconduct</li>
               <li>
                 <span>Travelled out-of-state to officiate</span>
-                <a href="https://nirsa.net" target="_blank" class="underline print:no-underline">NIRSA</a>
+                <a href="https://nirsa.net" target="_blank" class="print:no-underline underline">NIRSA</a>
                 <span>sanctioned tournaments</span>
               </li>
             </ul>
@@ -244,10 +245,10 @@
       <!-- END: Work Experience -->
       <!-- START: Projects -->
       <section id="projects">
-        <h2 class="mb-1.5 w-full border-b border-black font-bold uppercase tracking-wider">Projects</h2>
+        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Projects</h2>
         <div class="flex flex-col gap-y-1.5">
           <!-- START: Blockey Hockey -->
-          <div class="flex flex-col gap-y-1">
+          <div class="gap-y-1 flex flex-col">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Blockey Hockey</p>
@@ -255,34 +256,34 @@
                   Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, Github Pages
                 </p>
               </div>
-              <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">Since December 2014</p>
+              <div class="min-w-max flex flex-col text-right">
+                <p class="xs:inline hidden">Since December 2014</p>
                 <p class="xs:hidden">Since Dec. '14</p>
               </div>
             </div>
             <ul class="ml-4 list-disc">
               <li>
                 <span>What started out as a simple command block-based</span>
-                <a href="https://www.minecraft.net" target="_blank" class="underline print:no-underline">
+                <a href="https://www.minecraft.net" target="_blank" class="print:no-underline underline">
                   Minecraft</a
                 >
                 <span>mini-game,</span>
-                <a href="https://youtu.be/n7iLQbPl4Rg" target="_blank" class="underline print:no-underline">
+                <a href="https://youtu.be/n7iLQbPl4Rg" target="_blank" class="print:no-underline underline">
                   Blockey Hockey</a
                 >
                 <span>has evolved into a full-stack, Java-developed Minecraft plugin using the</span>
-                <a href="https://papermc.io" target="_blank" class="underline print:no-underline">
+                <a href="https://papermc.io" target="_blank" class="print:no-underline underline">
                   Spigot/Paper API.</a
                 >
                 <span>Today, the game is accompanied by a</span>
-                <a href="https://blockeyhockey.net" target="_blank" class="underline print:no-underline"
+                <a href="https://blockeyhockey.net" target="_blank" class="print:no-underline underline"
                   >website</a
                 >
                 <span>and has fully automated, in-game </span>
                 <a
                   href="https://blockeyhockey.net/scores"
                   target="_blank"
-                  class="underline print:no-underline"
+                  class="print:no-underline underline"
                   >stat tracking.</a
                 >
               </li>
@@ -290,7 +291,7 @@
           </div>
           <!-- END: Blockey Hockey -->
           <!-- START: Greenhouse -->
-          <div class="flex flex-col gap-y-1">
+          <div class="gap-y-1 flex flex-col">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Drag and Drop Greenhouse</p>
@@ -299,8 +300,8 @@
                   <a href="https://github.com/tiberiuzuld/angular-gridster2" target="_blank">Gridster API</a>
                 </p>
               </div>
-              <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">August - November 2021</p>
+              <div class="min-w-max flex flex-col text-right">
+                <p class="xs:inline hidden">August - November 2021</p>
                 <p class="xs:hidden">Aug. - Nov. '21</p>
               </div>
             </div>
@@ -319,6 +320,6 @@
       <!-- END: Projects -->
     </div>
     <!-- END: Page -->
-    <span class="absolute bottom-0 left-0 right-0 mx-auto w-max">Created with HTML and CSS</span>
+    <span class="w-max print:hidden absolute bottom-0 left-0 right-0 mx-auto">Created with HTML and CSS</span>
   </body>
 </html>
