--- a/resume/index.html
+++ b/resume/index.html
@@ -12,47 +12,48 @@
   </head>
   <!-- TODO: fix text not being smaller in print version -->
   <body
-    class="layout relative mx-auto h-full max-w-[750px] pt-10 pb-80 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-[10px] print:leading-3 xs:text-sm">
+    class="layout relative mx-auto h-full max-w-[750px] pt-10 pb-80 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:inline print:max-w-[700px] print:break-inside-avoid print:pb-0 print:pt-0 print:text-[10px] print:leading-3 xs:text-sm">
     <!-- START: Page -->
-    <div class="gap-y-2 flex flex-col">
+    <div class="flex flex-col gap-y-2">
       <!-- START: Header -->
       <section id="header" class="flex flex-col text-center">
-        <h1 class="print:text-base text-xl font-bold">Jake Harvanchik</h1>
+        <h1 class="text-xl font-bold print:text-base">Jake Harvanchik</h1>
         <a href="https://goo.gl/maps/mQ9rL8scAhPr5SRJ6" target="_blank" class="mx-auto"
           >Stevenson Ranch, California 91381</a
         >
         <p
           class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 print:max-w-none print:text-[10px] md:max-w-none">
           <!-- START: Cell Number -->
-          <a href="tel:+16618033757" class="gap-x-1 flex flex-row">
+          <a href="tel:+16618033757" class="flex flex-row gap-x-1">
             <i class="fa-solid fa-phone my-auto"></i>
             <span class="my-auto">(661) 803-3757</span>
           </a>
           <!-- END: Cell Number -->
-          <span class="print:inline md:inline hidden">|</span>
+          <span class="hidden print:inline md:inline">|</span>
           <!-- START: Email Address -->
-          <a href="mailto:resume@harvanchik.me" target="_blank" class="gap-x-1 flex flex-row">
+          <a href="mailto:resume@harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
             <i class="fa-solid fa-envelope my-auto"></i>
             <span class="my-auto">resume@harvanchik.me</span>
           </a>
           <!-- END: Email Address -->
-          <span class="print:inline md:inline hidden">|</span>
+          <span class="hidden print:inline md:inline">|</span>
           <!-- START: Online Portfolio -->
-          <a href="https://jake.harvanchik.me" target="_blank" class="gap-x-1 flex flex-row">
+          <a href="https://jake.harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
             <i class="fa-solid fa-laptop-code my-auto"></i>
             <span class="my-auto">jake.harvanchik.me</span>
           </a>
           <!-- END: Online Portfolio -->
-          <span class="print:inline md:inline hidden">|</span>
+          <span class="hidden print:inline md:inline">|</span>
           <!-- START: Linked In -->
-          <a href="https://www.linkedin.com/in/harvanchik" target="_blank" class="gap-x-1 flex flex-row">
+          <a href="https://www.linkedin.com/in/harvanchik" target="_blank" class="flex flex-row gap-x-1">
             <i class="fa-brands fa-linkedin-in my-auto"></i>
-            <span class="my-auto">harvanchik</span>
+            <span class="my-auto hidden print:inline">linkedin.com/in/harvanchik</span>
+            <span class="my-auto inline print:hidden">harvanchik</span>
           </a>
           <!-- END: Linked In -->
-          <span class="print:inline md:inline hidden">|</span>
+          <span class="hidden print:inline md:inline">|</span>
           <!-- START: GitHub -->
-          <a href="https://github.com/harvanchik" target="_blank" class="gap-x-1 flex flex-row">
+          <a href="https://github.com/harvanchik" target="_blank" class="flex flex-row gap-x-1">
             <i class="fa-brands fa-github my-auto"></i>
             <span class="my-auto">harvanchik</span>
           </a>
@@ -72,8 +73,8 @@
                 California State University, Fullerton
               </a>
             </div>
-            <div class="min-w-max flex flex-col text-right">
-              <p class="xs:inline hidden">Expected May 2023</p>
+            <div class="flex min-w-max flex-col text-right">
+              <p class="hidden xs:inline">Expected May 2023</p>
               <p class="xs:hidden">Exp. May '23</p>
               <p>Fullerton, CA</p>
             </div>
@@ -88,9 +89,9 @@
           Related Courses
         </h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="columns-2 gap-x-20 w-full ml-4 list-disc">
+          <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
             <li class="min-w-max">
-              <span class="min-w-max xs:inline hidden">Object-Oriented Programming</span>
+              <span class="hidden min-w-max xs:inline">Object-Oriented Programming</span>
               <span class="xs:hidden">Object Oriented Program.</span>
               <span class="italic"> | Java</span>
             </li>
@@ -103,8 +104,8 @@
               <span class="italic"> | Unity/C#</span>
             </li>
             <li class="min-w-max">Calculus I, II, III</li>
-            <li class="min-w-max">Statistics</li>
-            <li class="min-w-max xs:list-item hidden">Visual Basic for Applications</li>
+            <li class="min-w-max">Statistics & Discrete Math</li>
+            <li class="hidden min-w-max xs:list-item">Visual Basic for Applications</li>
             <li class="min-w-max xs:hidden">Visual Basic for Apps.</li>
           </ul>
         </div>
@@ -161,14 +162,14 @@
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase">Work Experience</h2>
         <div class="flex flex-col gap-y-1.5">
           <!-- START: DiD Integration -->
-          <div class="gap-y-1 flex flex-col">
+          <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Junior Software Developer</p>
                 <a href="https://didintegration.com" target="_blank" class="italic">DiD Integration, Inc.</a>
               </div>
-              <div class="font-xs sm:font-sm min-w-max flex flex-col text-right">
-                <p class="xs:inline hidden">July 2020 - November 2021</p>
+              <div class="font-xs sm:font-sm flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">July 2020 - November 2021</p>
                 <p class="xs:hidden">July '20 - Nov. '21</p>
                 <p>Valencia, CA</p>
               </div>
@@ -176,20 +177,22 @@
             <ul class="ml-4 list-disc">
               <li>
                 Redesigned the
-                <a href="https://agknowledge.com" target="_blank" class="print:no-underline underline">
+                <a href="https://agknowledge.com" target="_blank" class="underline print:no-underline">
                   company website
                 </a>
                 from scratch using
                 <a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a>
               </li>
-              <li>Learned new technology including TypeScript, Angular, TortoiseSVN, Apache, and Tomcat</li>
-              <li>Configured back-end process for retrieving database records using REST and MySQL</li>
+              <li
+                >Configured back-end process for retrieving database records using Apache, Tomcat, REST, and
+                MySQL</li
+              >
               <li>Designed front-end web applications using Angular on a client-need basis</li>
             </ul>
           </div>
           <!-- END: DiD Integration -->
           <!-- START: Residential Advisor -->
-          <div class="gap-y-1 flex flex-col">
+          <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Residential Advisor (RA)</p>
@@ -197,23 +200,22 @@
                   Housing and Residential Life
                 </a>
               </div>
-              <div class="min-w-max flex flex-col text-right">
-                <p class="xs:inline hidden">August 2019 - March 2020</p>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August 2019 - March 2020</p>
                 <p class="xs:hidden">Aug. '19 - March '20</p>
                 <p>Stillwater, OK</p>
               </div>
             </div>
             <ul class="ml-4 list-disc">
               <li>Oversaw 40+ student residents in on-campus housing</li>
-              <li>Hosted events, group meetings, and one-on-ones with residents</li>
               <li>Responded to urgent requests from residents and on-campus police while on-call at night</li>
-              <li>Defused chaotic situations including, but not limited to, alcohol and drugs</li>
+              <li>Defused chaotic situations involving, but not limited to, alcohol and drugs</li>
               <li>Recounted in great detail incidents within the housing community</li>
             </ul>
           </div>
           <!-- END: Residential Advisor -->
           <!-- START: Intramural Sports Supervisor -->
-          <div class="gap-y-1 flex flex-col">
+          <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Intramural Sports Supervisor</p>
@@ -221,8 +223,8 @@
                   Department of Wellness
                 </a>
               </div>
-              <div class="min-w-max flex flex-col text-right">
-                <p class="xs:inline hidden">August 2018 - March 2020</p>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August 2018 - March 2020</p>
                 <p class="xs:hidden">Aug. '18 - March '20</p>
                 <p>Stillwater, OK</p>
               </div>
@@ -231,10 +233,9 @@
               <li>Officiated basketball, flag football, softball, volleyball, soccer, and floor hockey</li>
               <li>Trained new officials in various sports by giving presentations on the rules</li>
               <li>Addressed unruly players, teams, or crowds when the officials were overwhelmed</li>
-              <li>Filed reports of player or team misconduct</li>
               <li>
                 <span>Travelled out-of-state to officiate</span>
-                <a href="https://nirsa.net" target="_blank" class="print:no-underline underline">NIRSA</a>
+                <a href="https://nirsa.net" target="_blank" class="underline print:no-underline">NIRSA</a>
                 <span>sanctioned tournaments</span>
               </li>
             </ul>
@@ -248,7 +249,7 @@
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Projects</h2>
         <div class="flex flex-col gap-y-1.5">
           <!-- START: Blockey Hockey -->
-          <div class="gap-y-1 flex flex-col">
+          <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Blockey Hockey</p>
@@ -256,42 +257,42 @@
                   Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, Github Pages
                 </p>
               </div>
-              <div class="min-w-max flex flex-col text-right">
-                <p class="xs:inline hidden">Since December 2014</p>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">Since December 2014</p>
                 <p class="xs:hidden">Since Dec. '14</p>
               </div>
             </div>
             <ul class="ml-4 list-disc">
               <li>
                 <span>What started out as a simple command block-based</span>
-                <a href="https://www.minecraft.net" target="_blank" class="print:no-underline underline">
+                <a href="https://www.minecraft.net" target="_blank" class="underline print:no-underline">
                   Minecraft</a
                 >
                 <span>mini-game,</span>
-                <a href="https://youtu.be/n7iLQbPl4Rg" target="_blank" class="print:no-underline underline">
+                <a href="https://youtu.be/n7iLQbPl4Rg" target="_blank" class="underline print:no-underline">
                   Blockey Hockey</a
                 >
                 <span>has evolved into a full-stack, Java-developed Minecraft plugin using the</span>
-                <a href="https://papermc.io" target="_blank" class="print:no-underline underline">
+                <a href="https://papermc.io" target="_blank" class="underline print:no-underline">
                   Spigot/Paper API.</a
                 >
                 <span>Today, the game is accompanied by a</span>
-                <a href="https://blockeyhockey.net" target="_blank" class="print:no-underline underline"
+                <a href="https://blockeyhockey.net" target="_blank" class="underline print:no-underline"
                   >website</a
                 >
                 <span>and has fully automated, in-game </span>
                 <a
                   href="https://blockeyhockey.net/scores"
                   target="_blank"
-                  class="print:no-underline underline"
-                  >stat tracking.</a
+                  class="underline print:no-underline"
+                  >player statistic tracking.</a
                 >
               </li>
             </ul>
           </div>
           <!-- END: Blockey Hockey -->
           <!-- START: Greenhouse -->
-          <div class="gap-y-1 flex flex-col">
+          <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Drag and Drop Greenhouse</p>
@@ -300,8 +301,8 @@
                   <a href="https://github.com/tiberiuzuld/angular-gridster2" target="_blank">Gridster API</a>
                 </p>
               </div>
-              <div class="min-w-max flex flex-col text-right">
-                <p class="xs:inline hidden">August - November 2021</p>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August - November 2021</p>
                 <p class="xs:hidden">Aug. - Nov. '21</p>
               </div>
             </div>
@@ -310,7 +311,6 @@
                 >While working at DiD Integration Inc., a client requested a solution for their inventory
                 management/location problem. The goal was to programmatically manage hundreds of greenhouses
                 by importing pallets with the ability to reorder the pallets by dragging and dropping.
-                Ease-of-use and efficiency was a top priority.
               </li>
             </ul>
           </div>
@@ -320,6 +320,6 @@
       <!-- END: Projects -->
     </div>
     <!-- END: Page -->
-    <span class="w-max print:hidden absolute bottom-0 left-0 right-0 mx-auto">Created with HTML and CSS</span>
+    <span class="absolute bottom-0 left-0 right-0 mx-auto w-max print:hidden">Created with HTML and CSS</span>
   </body>
 </html>
