updated resume technical skills

--- a/resume/index.html
+++ b/resume/index.html
@@ -129,6 +129,7 @@
               <a href="https://www.javascript.com" target="_blank">JavaScript,</a>
               <a href="https://www.typescriptlang.org" target="_blank">TypeScript,</a>
               <a href="http://www.cplusplus.org" target="_blank">C++,</a>
+              <a href="https://www.python.org/" target="_blank">Python,</a>
               <span>SQL,</span>
               <span>HTML,</span>
               <span>CSS</span>
@@ -148,10 +149,13 @@
               <a href="https://www.apple.com/mac" target="_blank">Mac,</a>
               <a href="https://git-scm.com" target="_blank">Git,</a>
               <a href="https://github.com" target="_blank">Github,</a>
-              <a href="https://desktop.github.com" target="_blank">Github Desktop</a>
+              <a href="https://desktop.github.com" target="_blank">Github Desktop,</a>
+              <a href="https://www.heroku.com" target="_blank">Heroku</a>
             </li>
             <li>
               <span class="font-bold">Other:</span>
+              <a href="https://code.visualstudio.com/" target="_blank">VS Code,</a>
+              <a href="https://www.jetbrains.com/idea/" target="_blank">IntelliJ,</a>
               <a href="https://www.office.com" target="_blank">Microsoft Office,</a>
               <a href="https://workspace.google.com/features" target="_blank">Google Sheets/Docs/Slides,</a>
               <a href="https://www.adobe.com/creativecloud.html" target="_blank">Adobe Products</a>
