added languages to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -132,7 +132,11 @@
               <a href="https://www.python.org/" target="_blank">Python,</a>
               <span>SQL,</span>
               <span>HTML,</span>
-              <span>CSS</span>
+              <span>CSS,</span>
+              <span>JSON,</span>
+              <span>YML,</span>
+              <span>XML,</span>
+              <span>MD</span>
             </li>
             <li>
               <span class="font-bold">Tech:</span>
@@ -140,8 +144,8 @@
               <a href="https://alpinejs.dev" target="_blank">Alpine,</a>
               <a href="https://gulpjs.com" target="_blank">Gulp,</a>
               <a href="https://www.mysql.com" target="_blank">MySQL,</a>
-              <span>REST,</span>
-              <a href="https://spring.io" target="_blank">Spring</a>
+              <a href="https://spring.io" target="_blank">Spring,</a>
+              <span>REST</span>
             </li>
             <li>
               <span class="font-bold">Operating Systems:</span>
