added button to open resume in new tab

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
             >See my work</a
           >
           <a
-            href="#"
+            href="https://jake.harvanchik.me/resume"
+            target="_blank"
             type="button"
-            class="active: cursor-pointer select-none rounded-full bg-gray-200 py-3 px-7 font-semibold text-gray-800 shadow-md transition-all duration-150 hover:bg-gray-300 hover:shadow-lg active:translate-y-0.5 active:bg-gray-400/60 active:shadow-xl"
-            >Learn about me</a
+            class="cursor-pointer select-none rounded-full bg-gray-200 py-3 px-7 font-semibold text-gray-800 shadow-md transition-all duration-150 hover:bg-gray-300 hover:shadow-lg active:translate-y-0.5 active:bg-gray-400/60 active:shadow-xl"
+            >View my résumé</a
           >
         </div>
       </section>
