updated related courses

--- a/resume/index.html
+++ b/resume/index.html
@@ -106,13 +106,18 @@
               <span class="italic"> | C++</span>
             </li>
             <li class="min-w-max">
-              <span>Video Game Design</span>
-              <span class="italic"> | Unity/C#</span>
+              <span>Software Engineering</span>
+              <span class="italic"> | TypeScript, HTML, CSS</span>
             </li>
-            <li class="min-w-max">Calculus I, II, III</li>
-            <li class="min-w-max">Statistics & Discrete Math</li>
-            <li class="hidden min-w-max xs:list-item"> Visual Basic for Applications </li>
-            <li class="min-w-max xs:hidden">Visual Basic for Apps.</li>
+            <li class="min-w-max">Python Programming</li>
+            <li class="min-w-max">
+              <span>Video Game Design</span>
+              <span class="italic"> | Unity, C#</span>
+            </li>
+            <li class="min-w-max">Calculus I-III, Stats, Discrete Math</li>
+
+            <!-- <li class="hidden min-w-max xs:list-item"> Visual Basic for Applications </li> -->
+            <!-- <li class="min-w-max xs:hidden">Visual Basic for Apps.</li> -->
           </ul>
         </div>
       </section>
