--- a/resume/index.html
+++ b/resume/index.html
@@ -82,8 +82,8 @@
               <a href="https://www.fullerton.edu" target="_blank" class="italic"> California State University, Fullerton </a>
             </div>
             <div class="flex flex-col text-right min-w-max">
-              <p class="hidden xs:inline">Expected May 2023</p>
-              <p class="xs:hidden">Exp. May '23</p>
+              <p class="hidden xs:inline">Expected Dec. 2023</p>
+              <p class="xs:hidden">Exp. Dec. '23</p>
               <p>Fullerton, CA</p>
             </div>
           </div>
