removed a bullet point from work xp

--- a/resume/index.html
+++ b/resume/index.html
@@ -218,13 +218,8 @@
               <li>Oversaw a staff of approximately 40 college students on a nightly basis</li>
               <li>Interviewed and hired candidates and lead new-hire trainings</li>
               <li>Created the staff work schedule and conducted biweekly all-staff meetings</li>
-              <li>Assisted patrons via phone, email, and in-person</li>
+              <!-- <li>Assisted patrons via phone, email, and in-person</li> -->
               <li>Dealt with conflict between participants and ensured the safety of all patrons and staff</li>
-              <!-- <li>
-                <span>Travelled out-of-state to officiate</span>
-                <a href="https://nirsa.net" target="_blank">NIRSA</a>
-                <span>sanctioned tournaments</span>
-              </li> -->
             </ul>
           </div>
           <!-- END: Intramural Sports Lead -->
