two minor fixes

--- a/resume/index.html
+++ b/resume/index.html
@@ -216,7 +216,7 @@
             </div>
             <ul class="ml-4 list-disc">
               <li>Oversaw a staff of approximately 40 college students on a nightly basis</li>
-              <li>Interviewed and hired candidates and lead new-hire trainings</li>
+              <li>Interviewed and hired candidates and led new-hire trainings</li>
               <li>Created the staff work schedule and conducted biweekly all-staff meetings</li>
               <!-- <li>Assisted patrons via phone, email, and in-person</li> -->
               <li>Dealt with conflict between participants and ensured the safety of all patrons and staff</li>
@@ -240,7 +240,7 @@
             <ul class="ml-4 list-disc">
               <li>
                 Redesigned the
-                <a href="https://agknowledge.com" target="_blank"> subsidiary website </a>
+                <a href="https://agknowledge.com" target="_blank"> subsidiary website</a>
                 from scratch using
                 <a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a>
               </li>
