updated pujols700 redirect link to youtube address

--- a/pujols700/index.html
+++ b/pujols700/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://www.youtube.com/channel/UCZ-FNPTXy4XRJ_WdBgg-geg'" />
+    <meta http-equiv="refresh" content="0; url='https://youtu.be/ehro076gAr0'" />
   </head>
   <body>
-    <p>Please follow <a href="https://www.youtube.com/channel/UCZ-FNPTXy4XRJ_WdBgg-geg">this link</a>.</p>
+    <p>Please follow <a href="https://youtu.be/ehro076gAr0">this link</a>.</p>
   </body>
 </html>
