updated youtube address for pujols redirect

--- a/pujols700/index.html
+++ b/pujols700/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://youtu.be/ehro076gAr0'" />
+    <meta http-equiv="refresh" content="0; url='https://youtu.be/E2yJDjHjHHA'" />
   </head>
   <body>
-    <p>Please follow <a href="https://youtu.be/ehro076gAr0">this link</a>.</p>
+    <p>Please follow <a href="https://youtu.be/E2yJDjHjHHA">this link</a>.</p>
   </body>
 </html>
