remove expected from graduation date suggested by academic success coordinator

--- a/resume/index.html
+++ b/resume/index.html
@@ -81,8 +81,8 @@
               <a href="https://www.fullerton.edu" target="_blank" class="italic"> California State University, Fullerton </a>
             </div>
             <div class="flex min-w-max flex-col text-right">
-              <p class="hidden xs:inline">Expected Dec. 2023</p>
-              <p class="xs:hidden">Exp. Dec. '23</p>
+              <p class="hidden xs:inline">Dec. 2023</p>
+              <p class="xs:hidden">Dec. '23</p>
               <p>Fullerton, CA</p>
             </div>
           </div>
