--- a/resume/index.html
+++ b/resume/index.html
@@ -81,7 +81,7 @@
               <a href="https://www.fullerton.edu" target="_blank" class="italic"> California State University, Fullerton </a>
             </div>
             <div class="flex min-w-max flex-col text-right">
-              <p class="hidden xs:inline">Dec. 2023</p>
+              <p class="hidden xs:inline">December 2023</p>
               <p class="xs:hidden">Dec. '23</p>
               <p>Fullerton, CA</p>
             </div>
