switched action verbs to present tense for IM Lead work experience

--- a/resume/index.html
+++ b/resume/index.html
@@ -249,11 +249,11 @@
               </div>
             </div>
             <ul class="ml-4 list-disc">
-              <li>Oversaw a staff of approximately 40 college students on a nightly basis</li>
-              <li>Interviewed and hired candidates and led new-hire trainings</li>
-              <li>Created the staff work schedule and conducted biweekly all-staff meetings</li>
+              <li>Develope a staff of approximately 40 college students on a nightly basis</li>
+              <li>Interview and hire candidates and lead new-hire trainings</li>
+              <li>Arrange the staff's work schedule and conduct biweekly all-staff meetings</li>
               <!-- <li>Assisted patrons via phone, email, and in-person</li>-->
-              <li>Dealt with conflict between participants and ensured the safety of all patrons and staff</li>
+              <li>Resolve conflict between participants and ensure the safety of all patrons and staff</li>
             </ul>
           </div>
           <!-- END: Intramural Sports Lead -->
