increased number of residents to 50 for res life work experience

--- a/resume/index.html
+++ b/resume/index.html
@@ -271,7 +271,7 @@
               </div>
             </div>
             <ul class="ml-4 list-disc">
-              <li>Oversaw 40+ student residents in on-campus housing</li>
+              <li>Oversaw approximately 50 student residents in on-campus housing</li>
               <li>Responded to urgent requests from residents and on-campus police while on-call at night</li>
               <li>Defused chaotic situations involving &mdash; but not limited to &mdash; drugs, alcohol, and rowdy parties</li>
               <li>Recounted in great detail incidents within the housing community for the purpose of filing reports</li>
