added current gpa to education

--- a/resume/index.html
+++ b/resume/index.html
@@ -77,7 +77,10 @@
         <div class="flex flex-col gap-y-1.5">
           <div class="flex flex-row justify-between">
             <div class="flex flex-col">
-              <p class="font-bold">Bachelor of Science, Computer Science</p>
+              <p class="flex flex-row space-x-3">
+                <span class="font-bold">Bachelor of Science, Computer Science</span>
+                <span id="gpa">GPA: 3.6</span>
+              </p>
               <a href="https://www.fullerton.edu" target="_blank" class="italic">California State University, Fullerton</a>
             </div>
             <div class="flex min-w-max flex-col text-right">
