reduced number of soft skills and fit to one line

--- a/resume/index.html
+++ b/resume/index.html
@@ -215,15 +215,13 @@
       <section x-cloak x-show="version === '1'" id="technical-skills">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Soft Skills</h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="ml-4 w-full list-disc columns-4 gap-x-20">
-            <li>Adaptable</li>
-            <li>Cooperative</li>
+          <ul class="ml-4 w-full list-disc columns-6 gap-x-11 print:gap-x-7">
+            <li>Versatile</li>
+            <li>Responsible</li>
             <li>Organized</li>
             <li>Reliable</li>
             <li>Professional</li>
             <li>Disciplined</li>
-            <li>Responsible</li>
-            <li>Versatile</li>
           </ul>
         </div>
       </section>
