converted paragraphs to bullet points for projects

--- a/resume/index.html
+++ b/resume/index.html
@@ -386,16 +386,23 @@
             </div>
             <ul class="ml-4 list-disc">
               <li>
-                <span>What started out as a simple command block-based</span>
-                <a href="https://www.minecraft.net" target="_blank">Minecraft</a>
-                <span>mini-game,</span>
-                <a href="https://youtu.be/n7iLQbPl4Rg" target="_blank">Blockey Hockey</a>
-                <span>has evolved into a full-stack, Java-developed Minecraft plugin using the</span>
-                <a href="https://papermc.io" target="_blank">Spigot/Paper API.</a>
-                <span>Today, the game is accompanied by a</span>
-                <a href="https://blockeyhockey.net/scores" target="_blank">website</a>
-                <span>and has fully automated, in-game</span>
-                <a href="https://blockeyhockey.net/b/ZdOL9dagQJrE-" target="_blank">statistic tracking.</a>
+                <span>Evolved a</span>
+                <a href="https://youtu.be/n7iLQbPl4Rg" target="_blank">command-block-based Minecraft mini-game</a>
+                <span>into a Java-developed plugin using the</span>
+                <a href="https://papermc.io" target="_blank">Spigot/Paper API </a>
+              </li>
+              <li>
+                <span>Developed a</span>
+                <a href="https://github.com/BlockeySports" target="_blank">full-stack application</a>
+                <span>including the</span>
+                <a href="https://github.com/BlockeySports/BlockeyHockeyWebApp" target="_blank">website</a>
+                <span>, REST API, and MySQL database</span>
+              </li>
+              <li>
+                <span>Integrated fully automated, in-game statistic tracking for</span>
+                <a href="https://blockeyhockey.net/scores" target="_blank">games</a>
+                <span>and</span>
+                <a href="https://blockeyhockey.net/u/Markstrom">individual players</a>
               </li>
             </ul>
           </div>
@@ -406,7 +413,7 @@
               <div class="flex flex-col">
                 <p class="font-bold">Drag and Drop Greenhouse</p>
                 <p class="italic">
-                  Technologies: Angular, TypeScript, HTML, CSS,
+                  <span>Technologies: Angular, TypeScript, HTML, CSS,</span>
                   <a href="https://github.com/tiberiuzuld/angular-gridster2" target="_blank">Gridster API</a>
                 </p>
               </div>
@@ -416,10 +423,9 @@
               </div>
             </div>
             <ul class="ml-4 list-disc">
-              <li>
-                While working at DiD Integration Inc., a client requested a solution for their inventory management/location problem. The goal was to
-                programmatically manage hundreds of greenhouses by importing pallets with the ability to reorder the pallets by dragging and dropping.
-              </li>
+              <li>Designed a custom drag-n-drop solution for a client's inventory management/location problem</li>
+              <li>Allowed the user to manage hundreds of greenhouses by importing, reordering, and removing pallets on-demand</li>
+              <li>Assisted in the back-end development by interfacing with the REST API and the SQL database</li>
             </ul>
           </div>
           <!-- END: Greenhouse -->
