squeezed related courses into two rows instead of three

--- a/resume/index.html
+++ b/resume/index.html
@@ -97,26 +97,25 @@
       <section x-cloak x-show="version === '1'" id="related-courses">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Related Courses</h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="ml-4 w-full list-disc columns-2 gap-x-20 print:gap-x-16">
+          <ul class="ml-4 w-full list-disc columns-3 gap-x-14 print:gap-x-5">
             <li class="min-w-max">
-              <span class="hidden min-w-max xs:inline">Object-Oriented Programming</span>
-              <span class="xs:hidden">Object Oriented Program.</span>
-              <span class="italic">| Java</span>
+              <span class="min-w-max">Object-Oriented Program.</span>
+              <span class="italic print:text-[11px]">| Java</span>
             </li>
             <li class="min-w-max">
               <span>Data Structures</span>
-              <span class="italic">| C++</span>
+              <span class="italic print:text-[11px]">| C++</span>
             </li>
             <li class="min-w-max">
-              <span>Software Engineering</span>
-              <span class="italic">| TypeScript, HTML, CSS</span>
+              <span>Software Engin.</span>
+              <span class="italic print:text-[11px]">| TS, HTML, CSS</span>
             </li>
             <li class="min-w-max">Python Programming</li>
             <li class="min-w-max">
-              <span>Video Game Design</span>
-              <span class="italic">| Unity, C#</span>
+              <span>Game Design</span>
+              <span class="italic print:text-[11px]">| Unity, C#</span>
             </li>
-            <li class="min-w-max">Calculus I-III, Stats, Discrete Math</li>
+            <li class="min-w-max">Calc. I-III, Stats, Discrete Math</li>
 
             <!-- <li class="hidden min-w-max xs:list-item">Visual Basic for Applications</li>-->
             <!-- <li class="min-w-max xs:hidden">Visual Basic for Apps.</li>-->
