added hyperlink for gh pages

--- a/resume/index.html
+++ b/resume/index.html
@@ -376,7 +376,10 @@
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Blockey Hockey</p>
-                <p class="italic">Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, GitHub Pages</p>
+                <p class="italic"
+                  ><span>Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL,</span>
+                  <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>
+                </p>
               </div>
               <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">Since December 2014</p>
