fixed relative path for styles and favicon

--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Jake Harvanchik | Resume</title>
-    <link rel="stylesheet" href="/assets/styles/styles.css" />
+    <link rel="stylesheet" href="../assets/styles/styles.css" />
+    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
     <!-- START: Scripts -->
     <script src="https://kit.fontawesome.com/4f831b6978.js" crossorigin="anonymous"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
